// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClustersEmptyState /> should render with register disconnected cluster button 1`] = `
<Fragment>
  <div
    id="overview-emptystate-bg-img-container"
  >
    <Title
      className="space-left-lg space-bottom-md"
      headingLevel="h1"
      size="3xl"
    >
      Get started with OpenShift Container Platform
    </Title>
    <Title
      className="space-left-lg space-bottom-md"
      headingLevel="h2"
      size="lg"
    >
      Download, install and configure Red Hat OpenShift 4 for free now.
    </Title>
    <Link
      className="space-left-lg"
      replace={false}
      to="/create"
    >
      <span
        id="overview-emptystate-create-cluster"
      >
        Create an OpenShift cluster
      </span>
    </Link>
    <Link
      className="space-left-lg"
      id="overview-emptystate-register-cluster"
      replace={false}
      to="/register"
    >
      <Button
        className="buttonHref"
        icon={
          <ArrowRightIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        }
      >
        Register a disconnected cluster
      </Button>
    </Link>
  </div>
  <Title
    className="space-top-lg space-bottom-lg"
    headingLevel="h1"
    size="xl"
  >
    Get productive with OpenShift
  </Title>
  <Flex
    id="overview-emptystate-get-productive"
  >
    <Flex
      className="flex-pair"
    >
      <FlexItem>
        <Card
          className="dashboard-emptystate-card"
        >
          <CardTitle>
            <Title
              className="card-title"
              headingLevel="h2"
              size="lg"
            >
              OpenShift Serverless
            </Title>
          </CardTitle>
          <CardBody>
            Help developers simplify the process of delivering code from development to production.
            <a
              href="https://docs.openshift.com/container-platform/latest/serverless/serverless-getting-started.html"
              rel="noreferrer noopener"
              target="_blank"
            >
              <Button
                icon={
                  <ArrowRightIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  />
                }
                variant="link"
              >
                Get started
              </Button>
            </a>
          </CardBody>
        </Card>
      </FlexItem>
      <FlexItem>
        <Card
          className="dashboard-emptystate-card"
        >
          <CardTitle>
            <Title
              className="card-title"
              headingLevel="h2"
              size="lg"
            >
              Red Hat OpenShift Service Mesh
            </Title>
          </CardTitle>
          <CardBody>
            Connect, secure and monitor microservices in your OpenShift Container Platform environment.
            <a
              href="https://docs.openshift.com/container-platform/latest/service_mesh/service_mesh_arch/understanding-ossm.html"
              rel="noreferrer noopener"
              target="_blank"
            >
              <Button
                icon={
                  <ArrowRightIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  />
                }
                variant="link"
              >
                Get started
              </Button>
            </a>
          </CardBody>
        </Card>
      </FlexItem>
    </Flex>
    <Flex
      className="flex-pair"
    >
      <FlexItem>
        <Card
          className="dashboard-emptystate-card"
        >
          <CardTitle>
            <Title
              headingLevel="h2"
              size="lg"
            >
              Container-native virtualization
            </Title>
          </CardTitle>
          <CardBody>
            Run and manage virtual machine workloads alongside your container workloads.
            <a
              href="https://docs.openshift.com/container-platform/latest/cnv/cnv-about-cnv.html"
              rel="noreferrer noopener"
              target="_blank"
            >
              <Button
                icon={
                  <ArrowRightIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  />
                }
                variant="link"
              >
                Get started
              </Button>
            </a>
          </CardBody>
        </Card>
      </FlexItem>
      <FlexItem>
        <Card
          className="dashboard-emptystate-card"
        >
          <CardTitle>
            <Title
              headingLevel="h2"
              size="lg"
            >
              Migrating OpenShift Container Platform 3 to 4
            </Title>
          </CardTitle>
          <CardBody>
            Plan your transition and migrate from OpenShift Container Platform 3 to 4.
            <a
              href="https://docs.openshift.com/container-platform/latest/migration/migrating_3_4/about-migration.html"
              rel="noreferrer noopener"
              target="_blank"
            >
              <Button
                icon={
                  <ArrowRightIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  />
                }
                variant="link"
              >
                Get started
              </Button>
            </a>
          </CardBody>
        </Card>
      </FlexItem>
    </Flex>
  </Flex>
  <Grid>
    <GridItem
      span={12}
    >
      <div
        className="top-row space-top-lg"
        id="dashboard-emptystate-osd"
      >
        <Title
          className="card-title"
          headingLevel="h2"
          size="lg"
        >
          Let Red Hat run it for you
        </Title>
        Red hat OpenShift Dedicated is a single-tenant, high availability Kubernetes clusters, managed by Red Hat on Amazon Web Services or Google Cloud Platform.
        <a
          href="https://www.openshift.com/products/dedicated/contact/"
          id="request-information-btn"
          rel="noreferrer noopener"
          target="_blank"
        >
          <Button
            variant="secondary"
          >
            Request information
          </Button>
        </a>
      </div>
    </GridItem>
  </Grid>
  <Title
    className="space-top-lg space-bottom-lg"
    headingLevel="h1"
    size="lg"
  >
    Learn more about the platform
  </Title>
  <div
    id="emptystate-learn-more"
  >
    <div>
      <iframe
        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
        allowFullScreen={true}
        frameBorder="0"
        height="315"
        src="https://www.youtube.com/embed/D_Lj0rObunI"
        title="learn more"
        width="560"
      />
    </div>
    <div>
      <Title
        className="space-left-lg space-bottom-md"
        headingLevel="h2"
        size="lg"
      >
        Other resources
      </Title>
      <List>
        <ListItem>
          <a
            href="https://docs.openshift.com/container-platform/4.4/welcome/index.html"
            rel="noreferrer noopener"
            target="_blank"
          >
            Official documents
          </a>
        </ListItem>
        <ListItem>
          <a
            href="https://www.openshift.com/blog"
            rel="noreferrer noopener"
            target="_blank"
          >
            Blog
          </a>
        </ListItem>
        <ListItem>
          <a
            href="https://www.openshift.com/learn/courses/getting-started/"
            rel="noreferrer noopener"
            target="_blank"
          >
            Tutorials
          </a>
        </ListItem>
        <ListItem>
          <a
            href="https://www.openshift.com/learn/courses/playground/"
            rel="noreferrer noopener"
            target="_blank"
          >
            Playground
          </a>
        </ListItem>
        <ListItem>
          <a
            href="https://www.twitch.tv/redhatopenshift"
            rel="noreferrer noopener"
            target="_blank"
          >
            Twich
          </a>
        </ListItem>
      </List>
    </div>
  </div>
</Fragment>
`;

exports[`<ClustersEmptyState /> should render without register disconnected cluster button 1`] = `
<Fragment>
  <div
    id="overview-emptystate-bg-img-container"
  >
    <Title
      className="space-left-lg space-bottom-md"
      headingLevel="h1"
      size="3xl"
    >
      Get started with OpenShift Container Platform
    </Title>
    <Title
      className="space-left-lg space-bottom-md"
      headingLevel="h2"
      size="lg"
    >
      Download, install and configure Red Hat OpenShift 4 for free now.
    </Title>
    <Link
      className="space-left-lg"
      replace={false}
      to="/create"
    >
      <span
        id="overview-emptystate-create-cluster"
      >
        Create an OpenShift cluster
      </span>
    </Link>
  </div>
  <Title
    className="space-top-lg space-bottom-lg"
    headingLevel="h1"
    size="xl"
  >
    Get productive with OpenShift
  </Title>
  <Flex
    id="overview-emptystate-get-productive"
  >
    <Flex
      className="flex-pair"
    >
      <FlexItem>
        <Card
          className="dashboard-emptystate-card"
        >
          <CardTitle>
            <Title
              className="card-title"
              headingLevel="h2"
              size="lg"
            >
              OpenShift Serverless
            </Title>
          </CardTitle>
          <CardBody>
            Help developers simplify the process of delivering code from development to production.
            <a
              href="https://docs.openshift.com/container-platform/latest/serverless/serverless-getting-started.html"
              rel="noreferrer noopener"
              target="_blank"
            >
              <Button
                icon={
                  <ArrowRightIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  />
                }
                variant="link"
              >
                Get started
              </Button>
            </a>
          </CardBody>
        </Card>
      </FlexItem>
      <FlexItem>
        <Card
          className="dashboard-emptystate-card"
        >
          <CardTitle>
            <Title
              className="card-title"
              headingLevel="h2"
              size="lg"
            >
              Red Hat OpenShift Service Mesh
            </Title>
          </CardTitle>
          <CardBody>
            Connect, secure and monitor microservices in your OpenShift Container Platform environment.
            <a
              href="https://docs.openshift.com/container-platform/latest/service_mesh/service_mesh_arch/understanding-ossm.html"
              rel="noreferrer noopener"
              target="_blank"
            >
              <Button
                icon={
                  <ArrowRightIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  />
                }
                variant="link"
              >
                Get started
              </Button>
            </a>
          </CardBody>
        </Card>
      </FlexItem>
    </Flex>
    <Flex
      className="flex-pair"
    >
      <FlexItem>
        <Card
          className="dashboard-emptystate-card"
        >
          <CardTitle>
            <Title
              headingLevel="h2"
              size="lg"
            >
              Container-native virtualization
            </Title>
          </CardTitle>
          <CardBody>
            Run and manage virtual machine workloads alongside your container workloads.
            <a
              href="https://docs.openshift.com/container-platform/latest/cnv/cnv-about-cnv.html"
              rel="noreferrer noopener"
              target="_blank"
            >
              <Button
                icon={
                  <ArrowRightIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  />
                }
                variant="link"
              >
                Get started
              </Button>
            </a>
          </CardBody>
        </Card>
      </FlexItem>
      <FlexItem>
        <Card
          className="dashboard-emptystate-card"
        >
          <CardTitle>
            <Title
              headingLevel="h2"
              size="lg"
            >
              Migrating OpenShift Container Platform 3 to 4
            </Title>
          </CardTitle>
          <CardBody>
            Plan your transition and migrate from OpenShift Container Platform 3 to 4.
            <a
              href="https://docs.openshift.com/container-platform/latest/migration/migrating_3_4/about-migration.html"
              rel="noreferrer noopener"
              target="_blank"
            >
              <Button
                icon={
                  <ArrowRightIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  />
                }
                variant="link"
              >
                Get started
              </Button>
            </a>
          </CardBody>
        </Card>
      </FlexItem>
    </Flex>
  </Flex>
  <Grid>
    <GridItem
      span={12}
    >
      <div
        className="top-row space-top-lg"
        id="dashboard-emptystate-osd"
      >
        <Title
          className="card-title"
          headingLevel="h2"
          size="lg"
        >
          Let Red Hat run it for you
        </Title>
        Red hat OpenShift Dedicated is a single-tenant, high availability Kubernetes clusters, managed by Red Hat on Amazon Web Services or Google Cloud Platform.
        <a
          href="https://www.openshift.com/products/dedicated/contact/"
          id="request-information-btn"
          rel="noreferrer noopener"
          target="_blank"
        >
          <Button
            variant="secondary"
          >
            Request information
          </Button>
        </a>
      </div>
    </GridItem>
  </Grid>
  <Title
    className="space-top-lg space-bottom-lg"
    headingLevel="h1"
    size="lg"
  >
    Learn more about the platform
  </Title>
  <div
    id="emptystate-learn-more"
  >
    <div>
      <iframe
        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
        allowFullScreen={true}
        frameBorder="0"
        height="315"
        src="https://www.youtube.com/embed/D_Lj0rObunI"
        title="learn more"
        width="560"
      />
    </div>
    <div>
      <Title
        className="space-left-lg space-bottom-md"
        headingLevel="h2"
        size="lg"
      >
        Other resources
      </Title>
      <List>
        <ListItem>
          <a
            href="https://docs.openshift.com/container-platform/4.4/welcome/index.html"
            rel="noreferrer noopener"
            target="_blank"
          >
            Official documents
          </a>
        </ListItem>
        <ListItem>
          <a
            href="https://www.openshift.com/blog"
            rel="noreferrer noopener"
            target="_blank"
          >
            Blog
          </a>
        </ListItem>
        <ListItem>
          <a
            href="https://www.openshift.com/learn/courses/getting-started/"
            rel="noreferrer noopener"
            target="_blank"
          >
            Tutorials
          </a>
        </ListItem>
        <ListItem>
          <a
            href="https://www.openshift.com/learn/courses/playground/"
            rel="noreferrer noopener"
            target="_blank"
          >
            Playground
          </a>
        </ListItem>
        <ListItem>
          <a
            href="https://www.twitch.tv/redhatopenshift"
            rel="noreferrer noopener"
            target="_blank"
          >
            Twich
          </a>
        </ListItem>
      </List>
    </div>
  </div>
</Fragment>
`;
